# got

./: Cargo.toml  ITERATION_PATTERNS.md  ITERATOR_MERGE_PLAN.md  README.md  REPOITER_DESIGN.md  SUBDIR_FEATURE.md  got-filter.md  test-porcelain.md
.beads/: issues.jsonl
crate/gixkit/: Cargo.toml  README.md
crate/gixkit/src/: decorators.rs  filters.rs  index.rs  lib.rs  repo.rs  repo_iter.rs  status.rs  types.rs  untracked.rs
crate/got/: Cargo.toml
crate/got-untracked/: Cargo.toml
crate/got-untracked/src/: index.rs  lib.rs  repo.rs  types.rs
crate/got/aliases/: alias-commitd.conf  alias-statusd.conf
crate/got/hooks/: hook-zsh.conf
crate/got/src/: cli.rs  lib.rs  main.rs  util.rs
crate/got/src/commands/: commitd.rs  dispatch.rs  execute.rs  goldest.rs  gotsel.rs  hook_got.rs  mod.rs  nah.rs  statusd.rs
crate/gotconfig/: Cargo.toml
crate/gotconfig/src/: alias.rs  lib.rs  paths.rs
crate/nah/: Cargo.toml
crate/nah/src/: cli.rs  ignore.rs  lib.rs  pick.rs
crate/porcelain/: Cargo.toml
crate/porcelain/src/: main.rs
doc/: OWNERSHIP_MODEL_ANALYSIS.md  gix-lookup.md
doc/archive/: got-filter-status.md
util/: README.md  alias  git-config-d
