[package]
name = "got"
version = "0.1.0"
    edition = "2021"
description = "A toolkit for git tools your past self should have used"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rektide/got"

[[bin]]
name = "got"
path = "src/main.rs"

[dependencies]
# Core CLI framework
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }

# Error handling
anyhow = "1"
thiserror = "1"

# System interaction
which = "4"

# Configuration
directories = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
